// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar Render all content 1`] = `
<div
  class="Bar-bar-0 Bar-auto-0"
  data-bar-part="Root"
>
  <div
    class="Bar-left-0"
    data-bar-part="Left"
  >
    <div>
      Content Left
    </div>
  </div>
  <div
    class="Bar-center-0"
    data-bar-part="Center"
  >
    <div
      class="Bar-inner-0"
    >
      <div>
        Content Middle
      </div>
    </div>
  </div>
  <div
    class="Bar-right-0"
    data-bar-part="Right"
  >
    <div>
      Content Right
    </div>
  </div>
</div>
`;

exports[`Bar Renders with default Props 1`] = `
<div
  class="Bar-bar-0 Bar-auto-0"
  data-bar-part="Root"
>
  <div
    class="Bar-left-0"
    data-bar-part="Left"
  />
  <div
    class="Bar-center-0"
    data-bar-part="Center"
  >
    <div
      class="Bar-inner-0"
    />
  </div>
  <div
    class="Bar-right-0"
    data-bar-part="Right"
  />
</div>
`;
